syntax = "proto3";

package qa;
option go_package = "./qa";

message CreateQuestionRequest {
  int64 user_id = 1;
  string title = 2;
  string description = 3;
}

message CreateQuestionReply {
  int64 id = 1;
}

message GetQuestionRequest {
  int64 id = 1;
}

message Question {
  int64 id = 1;
  int64 user_id = 2;
  string title = 3;
  string description = 4;
  bool is_resolved = 5;
  string create_time = 6;
}

message GetQuestionReply {
  Question question = 1;
}

message AnswerRequest {
  int64 question_id = 1;
  int64 user_id = 2;
  string content = 3;
}

message AnswerReply {
  int64 id = 1;
}

message GetAnswersRequest {
  int64 question_id = 1;
  int64 cursor = 2;
  int64 limit = 3;
}

message Answer {
  int64 id = 1;
  int64 question_id = 2;
  int64 user_id = 3;
  string content = 4;
  string create_time = 5;
}

message GetAnswersReply {
  repeated Answer answers = 1;
  bool has_more = 2;
}
message GetQuestionsRequest{
  int64 cursor = 1;
  int64 limit = 2;
  int64 question_id=3;
}
message GetQuestionsResponse{
  repeated Question questions = 1;
  bool has_more = 2;
}

service QaService {
  rpc CreateQuestion(CreateQuestionRequest) returns (CreateQuestionReply);
  rpc GetQuestion(GetQuestionRequest) returns (GetQuestionReply);
  rpc AnswerQuestion(AnswerRequest) returns (AnswerReply);
  rpc GetAnswers(GetAnswersRequest) returns (GetAnswersReply);
  rpc GetQuestions(GetQuestionsRequest)returns(GetQuestionsResponse);
}
